# titan-tyr

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  pyproject.toml
.claude/skills/: README.md
.claude/skills/accept-contract-deletion/: SKILL.md
.claude/skills/accept-contract-endpoint-shift/: SKILL.md
.claude/skills/accept-contract-proposal/: SKILL.md
.claude/skills/accept-part-deletion/: SKILL.md
.claude/skills/accept-part-name-shift/: SKILL.md
.claude/skills/accept-part-subtype-shift/: SKILL.md
.claude/skills/accept-template-proposal/: SKILL.md
.claude/skills/audit-skill/: SKILL.md
.claude/skills/bulk-claim-rows/: SKILL.md
.claude/skills/check-titan-tyr-env/: SKILL.md
.claude/skills/find-part/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
_model/: 00_index.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_templates.py  0003_software_issue_tracker_uri.py  0004_software_aliases.py  0005_software_to_part_subtype.py  0006_contract_subtype_and_binding.py  0007_connection_subtype.py  0008_image_part_subtype.py  0009_pod_part_subtype.py  0010_compose_part_subtype.py  0011_subtype_shift_proposals.py  0012_two_party_attribution.py  0013_creator_attribution.py  0014_contract_subtype_aware_uniqueness.py  0015_projects.py  0016_endpoint_and_name_shifts.py  0017_serves_static_connection_type.py  0018_contract_deletion.py  0019_part_deletion.py  0020_agent_actors.py  0021_auth_tokens.py  0022_k8s_runtime_subtypes.py  0023_k8s_connection_types.py
docs/: README.md  api.md  auth.md  getting-started.md
scripts/: README.md  accept.sh  bulk-claim-rows.sh  k8s-ui-token-init.sh  list-part-contracts.sh  list-routes.sh  propose-contract.sh  propose-shift.sh  propose-template.sh  show-contract.sh  show-issue.sh  show-template.sh  sync-titan-tyr-skills.sh  tyr-curl.sh  tyr-slug-check.sh
src/: auth.py  auth_tokens.py  cli.py  config.py  cors.py  db.py  main.py  models.py  pagination.py  schemas.py  versioning.py
src/routers/: _projects.py  _rules.py  _subtype_helpers.py  agent_actors.py  auth_tokens.py  contracts.py  health.py  parts.py  projects.py  proposals.py  software.py  templates.py
templates/: contract.md  software.md
tests/: conftest.py  test_agent_actors.py  test_auth.py  test_auth_tokens.py  test_cli_k8s_init.py  test_connection_types_k8s.py  test_contract_deletion.py  test_contract_put_and_actor_backfill.py  test_contracts.py  test_cors.py  test_cors_config.py  test_creator_attribution.py  test_endpoint_and_name_shifts.py  test_health.py  test_history.py  test_listings.py  test_part_deletion.py  test_part_subtypes_k8s.py  test_parts.py  test_projects.py  test_proposals.py  test_software.py  test_subtype_shifts.py  test_templates.py  test_two_party_attribution.py  test_versioning.py
(+31 files in other folders)
