[project]
name = "titan-tyr"
version = "0.1.0"
description = "WatcherVault REST API — typed parts (software, image, container, pod, compose) + typed contracts (interaction, binding, connection) as a versioned graph."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "testcontainers[postgres]>=4.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/__init__.py"]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "emoji"
build_command = ""
upload_to_pypi = false
upload_to_release = true
tag_format = "v{version}"

# Maps the repo's gitmoji-style commit prefixes to semver bumps.
# Anything not listed here is treated as no bump.
[tool.semantic_release.commit_parser_options]
major_tags = ["💥"]
minor_tags = ["✨", "🎉"]
patch_tags = ["🐛", "🚑", "⚡", "🔧", "📝", "♻️", "🔒", "⬆️", "🩹"]
